[gd_scene load_steps=2 format=3 uid="uid://dvu52fs1f3oqg"]

[ext_resource type="Script" uid="uid://bcti3ecxaguqa" path="res://main/enemy_generator/enemy_generator.gd" id="1_apvw3"]

[node name="EnemyGenerator" type="Node"]
script = ExtResource("1_apvw3")

[node name="EnemySpawn" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="EnemySpawn" to="." method="_on_enemy_spawn_timeout"]
